--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
         <button class="btn btn-success rounded-full px-5">copy</button>
       </div>
     </div>
+
+    <!-- banner -->
+
+    <section class="bg-gradient-to-r from-green-900 via-green-700 to-green-900 h-[200px] flex flex-col justify-center items-center text-center px-6">
+    <!-- Logo -->
+    <img src="./assets/logo-dark.png" alt="Logo" class="h-16 w-auto mb-6 object-contain">
+
+    <!-- Heading -->
+    <h2 class="text-xl font-bold text-white mb-6">Emergency Service Directory</h2>
+
+    <!-- Paragraph -->
+    <p class=" text-white ">
+         Government Emergency Services at Your Fingertip.A Project by Government of the People’s Republic of Bangladesh 
+    </p>
+</section>
+
     
     <script src="./script.js"></script>
 </body>
