--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Emergency Service</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
     integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
@@ -16,7 +16,6 @@
 
 <body>
 
-
   <!-- Navbar -->
   <div class="navbar bg-white text-green-700 px-6 shadow-[0_4px_6px_-1px_#0000001a]">
     <!-- Left -->
@@ -27,12 +26,12 @@
 
     <!-- Right -->
     <div class="ml-auto flex gap-2 items-center">
-      <button class="btn rounded-xl w-24 bg-green-50 text-lg border border-green-200">
-        <span>0</span>
+      <button id="heart-count-btn" class="btn rounded-xl w-24 bg-green-50 text-lg border border-green-200">
+        <span id="heart-count">0</span>
         <img src="./assets/heart.png" alt="" class="h-full object-contain">
       </button>
-      <button class="btn rounded-xl w-24 bg-green-50 text-lg border border-green-200">
-        <span>100</span>
+      <button id="coin-count-btn" class="btn rounded-xl w-24 bg-green-50 text-lg border border-green-200">
+        <span id="coin-count">100</span>
         <img src="./assets/coin.png" alt="" class="h-full object-contain">
       </button>
       <button class="btn btn-success rounded-full px-5">copy</button>
@@ -40,27 +39,24 @@
   </div>
 
   <!-- banner -->
-
   <section
     class="bg-gradient-to-r from-green-900 via-green-700 to-green-900 h-[200px] flex flex-col justify-center items-center text-center px-6">
-    <!-- Logo -->
     <img src="./assets/logo-dark.png" alt="Logo" class="h-16 w-auto mb-6 object-contain">
-
-    <!-- Heading -->
     <h2 class="text-xl font-bold text-white mb-6">Emergency Service Directory</h2>
-
-    <!-- Paragraph -->
     <p class=" text-white ">
-      Government Emergency Services at Your Fingertip.A Project by Government of the People’s Republic of Bangladesh
+      Government Emergency Services at Your Fingertip. A Project by Government of the People’s Republic of Bangladesh
     </p>
   </section>
 
   <main class="w-11/12 mx-auto grid grid-cols-12 gap-8 py-12">
 
-     <section class="col-span-9 bg-white p-6 rounded-lg shadow-md">
-    <div class="grid grid-cols-3 gap-6">
-<!-- Card 1 -->
-        <div class="card shadow-md rounded-lg p-4 relative">
+    <!-- Cards Section -->
+    <section class="col-span-9 bg-white p-6 rounded-lg shadow-md">
+      <div class="grid grid-cols-3 gap-6">
+
+        <!-- Loop for 9 cards -->
+        <!-- Card 1 -->
+        <div class="card shadow-md rounded-lg p-4 relative" id="card-1">
           <div class="flex justify-between items-start">
             <div class="flex flex-col">
               <img class="w-10 h-10 object-cover rounded-lg" src="./assets/emergency.png" alt="Logo">
@@ -70,17 +66,17 @@
               <span class="badge bg-slate-300 text-xs w-fit">All</span>
             </div>
             <div class="absolute top-3 right-3 p-2 rounded-full bg-white shadow">
-              <i class="fa-regular fa-heart"></i>
+              <i class="fa-regular fa-heart" id="heart-1"></i>
             </div>
           </div>
           <div class="mt-4 flex gap-2">
-            <button class="btn btn-outline flex-1 text-sm"><i class="fa-solid fa-copy"></i> Copy</button>
-            <button class="btn btn-success flex-1 text-sm text-white"><i class="fa-solid fa-phone"></i> Call</button>
+            <button class="btn btn-outline flex-1 text-sm" id="copy-1"><i class="fa-solid fa-copy"></i> Copy</button>
+            <button class="btn btn-success flex-1 text-sm text-white" id="call-1"><i class="fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
 
         <!-- Card 2 -->
-        <div class="card shadow-md rounded-lg p-4 relative">
+        <div class="card shadow-md rounded-lg p-4 relative" id="card-2">
           <div class="flex justify-between items-start">
             <div class="flex flex-col">
               <img class="w-10 h-10 object-cover rounded-lg" src="./assets/emergency.png" alt="Logo">
@@ -90,17 +86,17 @@
               <span class="badge bg-slate-300 text-xs w-fit">Travel</span>
             </div>
             <div class="absolute top-3 right-3 p-2 rounded-full bg-white shadow">
-              <i class="fa-regular fa-heart"></i>
+              <i class="fa-regular fa-heart" id="heart-2"></i>
             </div>
           </div>
           <div class="mt-4 flex gap-2">
-            <button class="btn btn-outline flex-1 text-sm"><i class="fa-solid fa-copy"></i> Copy</button>
-            <button class="btn btn-success flex-1 text-sm text-white"><i class="fa-solid fa-phone"></i> Call</button>
+            <button class="btn btn-outline flex-1 text-sm" id="copy-2"><i class="fa-solid fa-copy"></i> Copy</button>
+            <button class="btn btn-success flex-1 text-sm text-white" id="call-2"><i class="fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
 
         <!-- Card 3 -->
-        <div class="card shadow-md rounded-lg p-4 relative">
+        <div class="card shadow-md rounded-lg p-4 relative" id="card-3">
           <div class="flex justify-between items-start">
             <div class="flex flex-col">
               <img class="w-10 h-10 object-cover rounded-lg" src="./assets/fire-service.png" alt="Logo">
@@ -110,17 +106,17 @@
               <span class="badge bg-slate-300 text-xs w-fit">Safety</span>
             </div>
             <div class="absolute top-3 right-3 p-2 rounded-full bg-white shadow">
-              <i class="fa-regular fa-heart"></i>
+              <i class="fa-regular fa-heart" id="heart-3"></i>
             </div>
           </div>
           <div class="mt-4 flex gap-2">
-            <button class="btn btn-outline flex-1 text-sm"><i class="fa-solid fa-copy"></i> Copy</button>
-            <button class="btn btn-success flex-1 text-sm text-white"><i class="fa-solid fa-phone"></i> Call</button>
+            <button class="btn btn-outline flex-1 text-sm" id="copy-3"><i class="fa-solid fa-copy"></i> Copy</button>
+            <button class="btn btn-success flex-1 text-sm text-white" id="call-3"><i class="fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
 
         <!-- Card 4 -->
-        <div class="card shadow-md rounded-lg p-4 relative">
+        <div class="card shadow-md rounded-lg p-4 relative" id="card-4">
           <div class="flex justify-between items-start">
             <div class="flex flex-col">
               <img class="w-10 h-10 object-cover rounded-lg" src="./assets/ambulance.png" alt="Logo">
@@ -130,17 +126,17 @@
               <span class="badge bg-slate-300 text-xs w-fit">Health</span>
             </div>
             <div class="absolute top-3 right-3 p-2 rounded-full bg-white shadow">
-              <i class="fa-regular fa-heart"></i>
+              <i class="fa-regular fa-heart" id="heart-4"></i>
             </div>
           </div>
           <div class="mt-4 flex gap-2">
-            <button class="btn btn-outline flex-1 text-sm"><i class="fa-solid fa-copy"></i> Copy</button>
-            <button class="btn btn-success flex-1 text-sm text-white"><i class="fa-solid fa-phone"></i> Call</button>
+            <button class="btn btn-outline flex-1 text-sm" id="copy-4"><i class="fa-solid fa-copy"></i> Copy</button>
+            <button class="btn btn-success flex-1 text-sm text-white" id="call-4"><i class="fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
 
         <!-- Card 5 -->
-        <div class="card shadow-md rounded-lg p-4 relative">
+        <div class="card shadow-md rounded-lg p-4 relative" id="card-5">
           <div class="flex justify-between items-start">
             <div class="flex flex-col">
               <img class="w-10 h-10 object-cover rounded-lg" src="./assets/emergency.png" alt="Logo">
@@ -150,37 +146,37 @@
               <span class="badge bg-slate-300 text-xs w-fit">Safety</span>
             </div>
             <div class="absolute top-3 right-3 p-2 rounded-full bg-white shadow">
-              <i class="fa-regular fa-heart"></i>
+              <i class="fa-regular fa-heart" id="heart-5"></i>
             </div>
           </div>
           <div class="mt-4 flex gap-2">
-            <button class="btn btn-outline flex-1 text-sm"><i class="fa-solid fa-copy"></i> Copy</button>
-            <button class="btn btn-success flex-1 text-sm text-white"><i class="fa-solid fa-phone"></i> Call</button>
+            <button class="btn btn-outline flex-1 text-sm" id="copy-5"><i class="fa-solid fa-copy"></i> Copy</button>
+            <button class="btn btn-success flex-1 text-sm text-white" id="call-5"><i class="fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
 
         <!-- Card 6 -->
-        <div class="card shadow-md rounded-lg p-4 relative">
+        <div class="card shadow-md rounded-lg p-4 relative" id="card-6">
           <div class="flex justify-between items-start">
             <div class="flex flex-col">
               <img class="w-10 h-10 object-cover rounded-lg" src="./assets/emergency.png" alt="Logo">
-              <h3 class="text-lg font-semibold mt-2">Anti-Crruption Helpline</h3>
-              <p class="text-gray-600 text-sm mb-5">Anti-Cruption </p>
+              <h3 class="text-lg font-semibold mt-2">Anti-Corruption Helpline</h3>
+              <p class="text-gray-600 text-sm mb-5">Anti-Corruption</p>
               <h2 class="text-xl font-bold"><span>789</span></h2>
               <span class="badge bg-slate-300 text-xs w-fit">All</span>
             </div>
             <div class="absolute top-3 right-3 p-2 rounded-full bg-white shadow">
-              <i class="fa-regular fa-heart"></i>
+              <i class="fa-regular fa-heart" id="heart-6"></i>
             </div>
           </div>
           <div class="mt-4 flex gap-2">
-            <button class="btn btn-outline flex-1 text-sm"><i class="fa-solid fa-copy"></i> Copy</button>
-            <button class="btn btn-success flex-1 text-sm text-white"><i class="fa-solid fa-phone"></i> Call</button>
+            <button class="btn btn-outline flex-1 text-sm" id="copy-6"><i class="fa-solid fa-copy"></i> Copy</button>
+            <button class="btn btn-success flex-1 text-sm text-white" id="call-6"><i class="fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
 
         <!-- Card 7 -->
-        <div class="card shadow-md rounded-lg p-4 relative">
+        <div class="card shadow-md rounded-lg p-4 relative" id="card-7">
           <div class="flex justify-between items-start">
             <div class="flex flex-col">
               <img class="w-10 h-10 object-cover rounded-lg" src="./assets/emergency.png" alt="Logo">
@@ -190,17 +186,17 @@
               <span class="badge bg-slate-300 text-xs w-fit">Health</span>
             </div>
             <div class="absolute top-3 right-3 p-2 rounded-full bg-white shadow">
-              <i class="fa-regular fa-heart"></i>
+              <i class="fa-regular fa-heart" id="heart-7"></i>
             </div>
           </div>
           <div class="mt-4 flex gap-2">
-            <button class="btn btn-outline flex-1 text-sm"><i class="fa-solid fa-copy"></i> Copy</button>
-            <button class="btn btn-success flex-1 text-sm text-white"><i class="fa-solid fa-phone"></i> Call</button>
+            <button class="btn btn-outline flex-1 text-sm" id="copy-7"><i class="fa-solid fa-copy"></i> Copy</button>
+            <button class="btn btn-success flex-1 text-sm text-white" id="call-7"><i class="fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
 
         <!-- Card 8 -->
-        <div class="card shadow-md rounded-lg p-4 relative">
+        <div class="card shadow-md rounded-lg p-4 relative" id="card-8">
           <div class="flex justify-between items-start">
             <div class="flex flex-col">
               <img class="w-10 h-10 object-cover rounded-lg" src="./assets/emergency.png" alt="Logo">
@@ -210,17 +206,17 @@
               <span class="badge bg-slate-300 text-xs w-fit">Electricity</span>
             </div>
             <div class="absolute top-3 right-3 p-2 rounded-full bg-white shadow">
-              <i class="fa-regular fa-heart"></i>
+              <i class="fa-regular fa-heart" id="heart-8"></i>
             </div>
           </div>
           <div class="mt-4 flex gap-2">
-            <button class="btn btn-outline flex-1 text-sm"><i class="fa-solid fa-copy"></i> Copy</button>
-            <button class="btn btn-success flex-1 text-sm text-white"><i class="fa-solid fa-phone"></i> Call</button>
+            <button class="btn btn-outline flex-1 text-sm" id="copy-8"><i class="fa-solid fa-copy"></i> Copy</button>
+            <button class="btn btn-success flex-1 text-sm text-white" id="call-8"><i class="fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
 
         <!-- Card 9 -->
-        <div class="card shadow-md rounded-lg p-4 relative">
+        <div class="card shadow-md rounded-lg p-4 relative" id="card-9">
           <div class="flex justify-between items-start">
             <div class="flex flex-col">
               <img class="w-10 h-10 object-cover rounded-lg" src="./assets/brac.png" alt="Logo">
@@ -230,31 +226,30 @@
               <span class="badge bg-slate-300 text-xs w-fit">NGO</span>
             </div>
             <div class="absolute top-3 right-3 p-2 rounded-full bg-white shadow">
-              <i class="fa-regular fa-heart"></i>
+              <i class="fa-regular fa-heart" id="heart-9"></i>
             </div>
           </div>
           <div class="mt-4 flex gap-2">
-            <button class="btn btn-outline flex-1 text-sm"><i class="fa-solid fa-copy"></i> Copy</button>
-            <button class="btn btn-success flex-1 text-sm text-white"><i class="fa-solid fa-phone"></i> Call</button>
+            <button class="btn btn-outline flex-1 text-sm" id="copy-9"><i class="fa-solid fa-copy"></i> Copy</button>
+            <button class="btn btn-success flex-1 text-sm text-white" id="call-9"><i class="fa-solid fa-phone"></i> Call</button>
           </div>
         </div>
 
+      </div>
+    </section>
 
+    <!-- Call History -->
+    <aside class="col-span-3 bg-white p-6 rounded-lg shadow-md">
+      <div class="flex justify-between mx-auto">
+        <p><i class="fa-regular fa-clock"></i> Call History</p>
+        <button id="clear-history-btn" class="btn btn-success rounded-full px-5">Clear</button>
+      </div>
+      <ul id="call-history-list" class="mt-4">
+        <!-- JS will append <li> here -->
+      </ul>
+    </aside>
 
-    </div>
-     </section>
-
-      <aside class="col-span-3 bg-white p-6 rounded-lg shadow-md">
-    
-        <div class="flex justify-between mx-auto">
-      <p><i class="fa-regular fa-clock"></i>Call History</p>
-      <button class="btn btn-success rounded-full px-5">Clear</button>
-        </div>
-      </aside>
-       
   </main>
-
-
 
   <script src="./script.js"></script>
 </body>
